# mercurium

./: Cargo.toml  README.md  build.rs  license.html
benches/: benchmark.rs
src/: clap.rs  cli.rs  config.rs  db.rs  main.rs  payload.rs  pkg.rs  pkgfile.rs
src/clap/: blocking.rs  parallel.rs
src/payload/: blocking.rs  parallel.rs
