[package]
name = "mercurium"
authors = ["Christopher Hecker"]
license = "MIT"
description = "A toy package manager."
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.1", features = ["derive"] }
directories = "5.0.1"
flate2 = "1.0.27"
hex = "0.4.3"
log = "0.4.20"
nucleo-matcher = "0.2.0"
redb = { git = "https://github.com/ChHecker/redb.git", branch = "serialize", features = [
    "serialize-derive",
] }
reqwest = { version = "0.11.20", features = ["blocking"] }
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
sha2 = "0.10.7"
tar = "0.4.40"
thiserror = "1.0.47"
toml = "0.7.6"

[dev-dependencies]
color-eyre = "0.6.2"
criterion = "0.5.1"
simplelog = "0.12.1"
tempfile = "3.8.0"
