[package]
name = "mercurium"
authors = ["Christopher Hecker"]
license = "MIT"
description = "A toy package manager."
version = "0.1.0"
edition = "2021"

build = "build.rs"

[features]
default = ["parallel"]
parallel = ["dep:futures", "dep:tokio"]

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.1", features = ["derive"] }
color-eyre = "0.6.2"
directories = "5.0.1"
exitcode = "1.1.2"
flate2 = "1.0.27"
futures = { version = "0.3.28", optional = true }
hex = "0.4.3"
indicatif = "0.17.6"
log = "0.4.20"
nucleo-matcher = "0.2.0"
redb = { git = "https://github.com/ChHecker/redb.git", branch = "serialize", features = [
    "serialize-derive",
] }
reqwest = { version = "0.11.20", features = ["blocking", "stream"] }
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
simplelog = "0.12.1"
sha2 = "0.10.7"
tar = "0.4.40"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = [
    "macros",
    "rt-multi-thread",
], optional = true }
toml = "0.7.6"
inquire = "0.6.2"

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.8.0"

[build-dependencies]
clap = { version = "4.4.1", features = ["derive"] }
clap_complete = "4.4.0"

[profile.dev.package.backtrace]
opt-level = 3

[[bench]]
name = "benchmark"
harness = false
